# libreta

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Caddyfile.example  Makefile  README.md  docker-compose.caddy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  libreta.code-workspace  local.mk.example
.claude/: settings.json
.gitea/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/data/content/.libreta/: search.db
backend/src/libreta/: cli.py  config.py  deps.py  errors.py  main.py  models.py  tagging.py
backend/src/libreta/api/: assets.py  pages.py  search.py  sources.py  system.py  watch.py
backend/src/libreta/services/: gitea.py  sync.py
backend/src/libreta/storage/: assets.py  gc.py  gitea_servers.py  pagefile.py  pages.py  paths.py  repo.py  search.py  sources.py  ssh.py  watched.py
backend/tests/: conftest.py  test_admin_manage.py  test_asset_upload.py  test_assets.py  test_diff.py  test_gc.py  test_gitea_api.py  test_gitea_discovery.py  test_gitea_servers.py  test_history.py  test_pagefile.py  test_pages.py  test_paths.py  test_search.py  test_sources_sync.py  test_ssh_keys.py  test_system.py  test_tagging.py  test_watch.py
docs/: ARCHITECTURE.md  BACKUP.md  DEPLOY.md  MIGRATION-APPLE-NOTES.md  PERFORMANCE.md  PROGRESS.md  PROJECT.md  ROADMAP.md  SECURITY-REVIEW.md
docs/site/: faq.md  getting-started.md  index.md  troubleshooting.md
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  eslint.config.js  index.html  nginx.prod.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  foliate-js.d.ts  foliate-view.d.ts  main.ts  markdown.ts  markdownStorage.ts  router.ts  shims.d.ts  styles.css  textFiles.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Breadcrumbs.vue  DirListing.vue  NameDialog.vue  OutlineList.vue  PageToc.vue  PageToolbar.vue  PageTree.vue  PendingChangesPopover.vue  PreviewTile.vue  SourceSidebarPanel.vue  WatchedSidebarContent.vue
frontend/src/composables/: useNameDialog.ts  usePrefs.ts  useViewMode.ts
frontend/src/lib/: ebook.ts  html.ts  pdf.ts
frontend/src/stores/: sources.ts  tree.ts  watched.ts
frontend/src/utils/: pageName.ts  sourceLabel.ts
frontend/src/views/: AdminView.vue  PdfView.vue  (+15 more)
frontend/tests/: DiffView.spec.ts  DirListing.test.ts  Editor.spec.ts  EditorView.spec.ts  HistoryView.spec.ts  html.test.ts  markdown.test.ts  pageName.test.ts  textFiles.test.ts
scripts/: changelog.py  compute_tags.py  import_apple_notes.py  import_dokuwiki.py  migrate_to_sidecars.py  rewrite_sidecar_refs.py  smoke_bench.sh  sync_version.py
(+21 files in other folders)
