[project]
name = "libreta"
version = "1.5.1"
description = "Self-hosted wiki backed by a git repo of markdown files."
license = "AGPL-3.0-only"
license-files = ["../LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pygit2>=1.15",
    "python-frontmatter>=1.1",
    "markdown-it-py[plugins]>=3.0",
    "python-multipart>=0.0.27",
    # Runtime dep: Gitea repo discovery (services/gitea.py). Also serves the
    # test suite's FastAPI TestClient, which previously pulled it via dev only.
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
libreta = "libreta.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libreta"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[[tool.mypy.overrides]]
module = ["pygit2", "pygit2.*", "frontmatter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
